# embedded-test

./: .rust-analyzer.json  Cargo.toml  f  flake.nix
.cargo/: config.toml
fieldset/: Cargo.toml
fieldset/fieldset-macro/: Cargo.toml
fieldset/fieldset-macro/src/: lib.rs
fieldset/src/: lib.rs
life_eraser/: Cargo.toml
life_eraser/src/: lib.rs
src/: adc.rs  board.rs  bounded.rs  display.rs  ext_memory.rs  flow.rs  main.rs  parameter_controllers.rs  params.rs  user_inputs.rs  w25qxx.rs
w25qxx/: Cargo.toml
w25qxx/src/: lib.rs
