[package]
edition = "2021"
name = "embedded-test"
version = "0.1.0"
authors = ["Alexandros Liarokapis <liarokapis.v@gmail.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal-async = "1.0.0"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32h743zi", "unstable-pac", "memory-x", "time-driver-any" ]  }
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
num = { version = "0.4.1", default-features = false }
fieldset = { path = "fieldset" }
w25qxx = { path = "w25qxx" }
