[package]
name = "fieldset_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.58", features = [ "full", "parsing" ] }
quote = "1.0.36"
convert_case = "0.6.0"
heck = "0.5.0"
